src/test/deca/context/valid/conversion.deca

// Description :
// Conversion implicite int vers float dans une expression
//
// Resultats :
// ok
//

{
  int a = 1;
  float b = a;
  float c = b + 2.5;
}
