src/test/deca/context/invalid/bool_from_float.deca

// Description :
// Initialisation boolean avec float

// Resultats :
// Erreur contextuelle


{
  boolean b = 2.5;
}